--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
                     </ul>
                 </div>
                 <div class="hi__img">
-                    <img src="img/front-end.png" alt="">
+                    <img src="front-end.png" alt="">
                 </div>
             </div>
         </div>
         <div class="what">
             <div class="content">
                 <div class="what__img">
-                    <img src="img/frontend-dev.jpeg" alt="">
+                    <img src="frontend-dev.jpeg" alt="">
                 </div>
                 <div class="what__text text">
                     <h2 class="what__title title">Кто такой frontend-разработчик?</h2>
@@ -48,7 +48,7 @@
             <div class="content">
                 <div class="parts__part  text">
                         <h3 class="parts__title title">HTML5</h3>
-                        <img class="parts__img" src="img/html5.png" alt="">
+                        <img class="parts__img" src="html5.png" alt="">
                         <p> - язык для структурирования и представления содержимого всемирной паутины.</p>
                         <p>HTML5 был создан как единый язык разметки, который мог бы сочетать синтаксические нормы HTML
                             и XHTML. Он расширяет, улучшает и рационализирует разметку документов, а также добавляет
@@ -56,7 +56,7 @@
                 </div>
                 <div class="parts__part text">
                         <h3 class="parts__title title">CSS3</h3>
-                        <img class="parts__img" src="img/css3.png" alt="">
+                        <img class="parts__img" src="css3.png" alt="">
                         <p> - формальный язык описания внешнего вида документа (веб-страницы), написанного с
                             использованием языка разметки (чаще всего HTML или XHTML). Также может применяться к любым
                             XML-документам, например, к SVG или XUL.</p>
@@ -66,7 +66,7 @@
                 </div>
                 <div class="parts__part text">
                         <h3 class="parts__title title">JavaScript</h3>
-                        <img class="parts__img" src="img/js.png" alt="">
+                        <img class="parts__img" src="js.png" alt="">
                         <p> - мультипарадигменный язык программирования. Поддерживает объектно-ориентированный,
                             императивный и функциональный стили. Является реализацией спецификации ECMAScript.</p>
                         <p>Основные архитектурные черты: динамическая типизация, слабая типизация, автоматическое
@@ -74,7 +74,7 @@
                 </div>
                 <div class="parts__part text">
                         <h3 class="parts__title title">Frameworks</h3>
-                        <img class="parts__img" src="img/frameworks.png" alt="">
+                        <img class="parts__img" src="frameworks.png" alt="">
                         <p> - это библиотеки программирования JavaScript, в которых есть предварительно написанный код
                             для использования в стандартных функциях и задачах программирования. Это основа для создания
                             веб-сайтов или веб-приложений вокруг.</p>
